deploy/k3s/abcsxl-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: com-abcsxl-deployment
  labels:
    app: abcsxl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abcsxl
  template:
    metadata:
      labels:
        app: abcsxl
    spec:
      containers:
      - name: abcsxl
        image: quay.io/abcsxl/abcsxl:v2.0.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: abcsxl-data
          mountPath: /app/Data
      volumes:
      - name: abcsxl-data
        persistentVolumeClaim:
          claimName: abcsxl-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: com-abcsxl-service
spec:
  selector:
    app: abcsxl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: com-abcsxl-ingress
  labels:
    name: com-abcsxl-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true" 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - www.abcsxl.com
      - abcsxl.com
    secretName: com-abcsxl-tls

  rules:
  - host: "www.abcsxl.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: com-abcsxl-service
              port:
                number: 80
  - host: "abcsxl.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: com-abcsxl-service
              port:
                number: 80
